<resources>
    <string name="app_name">MSAid</string>
    <string name="msaid">MSAid</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="please_enter_your_information">Please Enter Your Information</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="do_you_have_multiple_sclerosis">Do you have Multiple Sclerosis?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last Name</string>
    <string name="age">Age</string>
    <string name="cont">Continue</string>
    <string name="city">City</string>
    <string name="alarms">Alarms</string>
    <string name="medication">Medication</string>
    <string name="profile">Profile</string>
    <string name="Alarms">Alarms</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="back">Back</string>
    <string name="add_alarms">Add Alarms</string>
    <string name="name">Name</string>
    <string name="time">Time</string>
    <string name="time1">Time</string>
    <string name="am_or_pm">AM or PM</string>
    <string name="name1">Name</string>
    <string name="time2">Time</string>
    <string name="confirm">Confirm</string>
    <string name="delete1">Delete</string>
    <string name="are_you_sure">Are You Sure?</string>
    <string name="yes1">Yes</string>
    <string name="no1">No</string>
    <string name="alarm_placeholder">ALARM PLACEHOLDER</string>
    <string name="loading_placeholder">...</string>
    <string name="log_out">Log Out</string>
    <string name="alarm_display_format">%1$s: %2$s %3$s</string>
</resources>